@@ -1,6 +1,6 @@
 ## Process this file with automake to produce Makefile.in
 
-SUBDIRS = intl dbus init util extra conf doc contrib po scripts
+SUBDIRS = intl dbus init util extra lib conf doc contrib po scripts
 
 EXTRA_DIST = HACKING
 
