@@ -1,0 +1,147 @@
+## Process this file with automake to produce Makefile.in
+
+VERSION_CURRENT  = 1
+VERSION_REVISION = 0
+VERSION_AGE      = 0
+
+LIBUPSTART_VERSION        = $(VERSION_CURRENT):$(VERSION_REVISION):$(VERSION_AGE)
+LIBUPSTART_VERSION_DOTTED = $(VERSION_CURRENT).$(VERSION_REVISION).$(VERSION_AGE)
+
+AM_CFLAGS = \
+	$(NIH_CFLAGS) \
+	$(NIH_DBUS_CFLAGS) \
+	$(DBUS_CFLAGS)
+
+AM_CPPFLAGS = \
+	-DLOCALEDIR="\"$(localedir)\"" \
+	-DSBINDIR="\"$(sbindir)\"" \
+	-I$(top_builddir) -I$(top_srcdir) -iquote$(builddir) -iquote$(srcdir) \
+	-I$(top_srcdir)/intl
+
+lib_LTLIBRARIES = libupstart.la
+
+# The library is built from the autogenerated code.
+nodist_libupstart_la_SOURCES = \
+	$(com_ubuntu_Upstart_OUTPUTS) \
+	$(com_ubuntu_Upstart_Job_OUTPUTS) \
+	$(com_ubuntu_Upstart_Instance_OUTPUTS)
+
+libupstart_la_LIBADD = 
+	$(LTLIBINTL) \
+	$(NIH_LIBS) \
+	$(NIH_DBUS_LIBS) \
+	$(DBUS_LIBS) \
+	-lrt
+
+libupstart_la_LDFLAGS = \
+	-version-info $(LIBUPSTART_VERSION) \
+	-no-undefined \
+	-Wl,--version-script=$(srcdir)/libupstart.ver
+
+# latest ABI
+abi_official = $(srcdir)/abi_dumps/libupstart/libupstart_$(LIBUPSTART_VERSION_DOTTED).abi.tar.gz
+
+# disposable ABI descriptor for the currently-built library
+abi_build_XML = libupstart-abi.xml
+
+$(abi_build_XML): $(abi_build_XML).in
+	sed -e 's|[@]abs_builddir[@]|$(abs_builddir)|g' \
+	    -e 's|[@]libupstart_version[@]|$(LIBUPSTART_VERSION_DOTTED)|g' \
+	    $< > $@
+
+pkgconfigdir = $(prefix)/lib/pkgconfig
+pkgconfig_DATA = libupstart.pc
+
+EXTRA_DIST = \
+	libupstart.pc.in \
+	run_abi_checker.sh.in \
+	libupstart.ver \
+	$(abi_official) \
+	$(abi_build_XML).in
+
+run_abi_checker.sh: run_abi_checker.sh.in libupstart.la $(abi_build_XML)
+	sed -e 's|[@]abs_builddir[@]|$(abs_builddir)|g' \
+	    -e 's|[@]abs_srcdir[@]|$(abs_srcdir)|g' \
+	    -e 's|[@]libupstart[@]|$(lib_LTLIBRARIES)|g' \
+	    -e 's|[@]libupstart_version[@]|$(LIBUPSTART_VERSION)|g' \
+	    -e 's|[@]abi_build_XML[@]|$(abi_build_XML)|g' \
+	    -e 's|[@]abi_compliance_checker[@]|$(ABI_COMPLIANCE_CHECKER)|g' \
+	    $< > $@
+	chmod +x $@
+
+check_SCRIPTS = run_abi_checker.sh
+
+com_ubuntu_Upstart_OUTPUTS = \
+	com.ubuntu.Upstart.c \
+	com.ubuntu.Upstart.h
+
+com_ubuntu_Upstart_XML = \
+	../dbus/com.ubuntu.Upstart.xml
+
+$(com_ubuntu_Upstart_OUTPUTS): $(com_ubuntu_Upstart_XML)
+	$(AM_V_GEN)$(NIH_DBUS_TOOL) \
+		--package=$(PACKAGE) \
+		--mode=proxy --prefix=upstart \
+		--default-interface=com.ubuntu.Upstart0_6 \
+		--output=$@ $<
+
+com_ubuntu_Upstart_Job_OUTPUTS = \
+	com.ubuntu.Upstart.Job.c \
+	com.ubuntu.Upstart.Job.h
+
+com_ubuntu_Upstart_Job_XML = \
+	../dbus/com.ubuntu.Upstart.Job.xml
+
+$(com_ubuntu_Upstart_Job_OUTPUTS): $(com_ubuntu_Upstart_Job_XML)
+	$(AM_V_GEN)$(NIH_DBUS_TOOL) \
+		--package=$(PACKAGE) \
+		--mode=proxy --prefix=job_class \
+		--default-interface=com.ubuntu.Upstart0_6.Job \
+		--output=$@ $<
+
+com_ubuntu_Upstart_Instance_OUTPUTS = \
+	com.ubuntu.Upstart.Instance.c \
+	com.ubuntu.Upstart.Instance.h
+
+com_ubuntu_Upstart_Instance_XML = \
+	../dbus/com.ubuntu.Upstart.Instance.xml
+
+$(com_ubuntu_Upstart_Instance_OUTPUTS): $(com_ubuntu_Upstart_Instance_XML)
+	$(AM_V_GEN)$(NIH_DBUS_TOOL) \
+		--package=$(PACKAGE) \
+		--mode=proxy --prefix=job \
+		--default-interface=com.ubuntu.Upstart0_6.Instance \
+		--output=$@ $<
+
+# These have to be built sources because we can't compile object files
+# without the header file existing first
+BUILT_SOURCES = \
+	$(com_ubuntu_Upstart_OUTPUTS) \
+	$(com_ubuntu_Upstart_Job_OUTPUTS) \
+	$(com_ubuntu_Upstart_Instance_OUTPUTS)
+
+CLEANFILES = \
+	$(com_ubuntu_Upstart_OUTPUTS) \
+	$(com_ubuntu_Upstart_Job_OUTPUTS) \
+	$(com_ubuntu_Upstart_Instance_OUTPUTS) \
+	$(abi_build_XML) \
+	$(pkgconfig_DATA)
+
+CLEANFILES += $(check_SCRIPTS)
+
+install-data-local:
+	$(MKDIR_P) $(DESTDIR)$(initconfdir)
+
+clean-local:
+	rm -f *.gcno *.gcda
+
+maintainer-clean-local:
+	rm -f *.gcov
+
+# Run ABI compliance checker on every build to ensure the library ABI
+# has not been inadvertently broken due to dbus/*.xml being updated
+# without a version change.
+if HAVE_ABI_CHECKER
+all-local: run_abi_checker.sh
+	$(builddir)/run_abi_checker.sh
+endif
