@@ -1,0 +1,7 @@
+LIBUPSTART_1.0.0 {
+	global:
+		upstart_*;
+		job_*;
+	local:
+		*;
+};
