@@ -1,0 +1,88 @@
+#!/bin/sh -e
+#---------------------------------------------------------------------
+# Script to run abi-compliance-checker to ensure ABI not broken.
+#---------------------------------------------------------------------
+# Copyright (C) 2013 Canonical Ltd.
+#
+# Author: James Hunt <james.hunt@canonical.com>
+#
+# This program is free software: you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation, version 3 of the License.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program.  If not, see <http://www.gnu.org/licenses/>.
+#
+#---------------------------------------------------------------------
+
+die()
+{
+    msg="$*"
+    echo "ERROR: $msg" >&2
+    exit 1
+}
+
+build_dir="@abs_builddir@"
+source_dir="@abs_srcdir@"
+acc="@abi_compliance_checker@"
+acc_descriptor="@abi_build_XML@"
+libupstart_libtool="@libupstart@"
+lib_prefix="${libupstart_libtool%.la}"
+libupstart_lt_version="@libupstart_version@"
+
+# convert libtool(1) version to dotted form
+dotted_version=$(echo "$libupstart_lt_version"|tr ':' '.')
+
+libupstart_path="$build_dir/$libupstart_libtool"
+
+old_abi="$source_dir/abi_dumps/${lib_prefix}/${lib_prefix}_${dotted_version}.abi.tar.gz"
+
+echo "Checking ABI for $lib_prefix"
+echo
+
+for file in "$libupstart_path" "$old_abi"
+do
+    [ -f "$file" ] || die "file $file not found"
+done
+
+# Install the library to a temporary location since we need the
+# full path to the shared library to pass to abi-compliance-checker.
+install_dir=$(mktemp -d --tmpdir="$build_dir")
+[ -z "$install_dir" ] && \
+	die "failed to create temporary install directory"
+
+libtool --mode=install install \
+    "$libupstart_libtool" "$install_dir" >/dev/null 2>&1
+
+abi_dump_dir=$(mktemp -d --tmpdir="$build_dir")
+[ -z "$abi_dump_dir" ] && \
+	die "failed to create temporary dump directory"
+
+abi_dump_path="$abi_dump_dir/${lib_prefix}_${dotted_version}.abi.tar.gz"
+
+installed_so="$install_dir/$(echo "$lib_prefix"|cut -d\. -f1).so"
+
+[ -f "$installed_so" ] || die "cannot find $installed_so"
+
+# generate a descriptor for the newly-built library version
+"$acc" -library "$lib_prefix" -dump "$acc_descriptor" -dump-path "$abi_dump_path"
+
+new_abi="$abi_dump_dir/${lib_prefix}_${dotted_version}.abi.tar.gz"
+[ -f "$new_abi" ] || die "cannot find $new_abi"
+
+# run the ABI checker
+"$acc" -library "$lib_prefix" -old "$old_abi" -new "$new_abi"
+
+# clean up
+libtool --mode=uninstall \
+    rm "$install_dir/$libupstart_libtool" >/dev/null 2>&1
+
+rm -rf "$abi_dump_dir" "$build_dir/logs" "$install_dir"
+
+# HTML report generated by $acc
+rm -rf compat_reports/
