@@ -1,0 +1,33 @@
+/* upstart
+ *
+ * Copyright © 2013 Canonical Ltd.
+ * Author: James Hunt <james.hunt@canonical.com>
+ *
+ * This program is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License version 2, as
+ * published by the Free Software Foundation.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License along
+ * with this program; if not, write to the Free Software Foundation, Inc.,
+ * 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
+ */
+
+#ifndef LIB_UPSTART_H
+#define LIB_UPSTART_H
+
+#include <nih/macros.h>
+
+NIH_BEGIN_EXTERN
+
+#include "com.ubuntu.Upstart.h"
+#include "com.ubuntu.Upstart.Instance.h"
+#include "com.ubuntu.Upstart.Job.h"
+
+NIH_END_EXTERN
+
+#endif /* LIB_UPSTART_H */
